application-manifest-files/react-k8s-manifest files/react-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: react-fargate-ns
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
